# rag-poc

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  sample_data.py
migrations/: env.py
migrations/versions/: 0001_create_tables.py  0002_create_connections.py
src/: db.py  embeddings.py  generation.py  main.py  models.py  sample_data.py
